# fastapi-film-catalog

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
film-catalog/: .coveragerc  .env.template  app_lifespan.py  config.default.yaml  films.json  main.py  manage.py  stuff.py
film-catalog/api/: main_views.py
film-catalog/api/api_v1/: __init__.py
film-catalog/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
film-catalog/api/api_v1/film_catalog_urls/: crud.py  data.json  dependencies.py  redis.py  views.py
film-catalog/api/api_v1/film_catalog_urls/views/: details_views.py  list_views.py
film-catalog/commands/: cli.py  data_preparation.py  hello.py  tokens.py
film-catalog/core/: config.py
film-catalog/schemas/: __init__.py  constants.py  film.py
film-catalog/testing/: __init__.py  conftest.py
film-catalog/testing/test_api/: conftest.py  test_views.py
film-catalog/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
film-catalog/testing/test_api/test_api_v1/test_film_catalog_urls/: test_crud.py  test_dependencies.py
film-catalog/testing/test_api/test_api_v1/test_film_catalog_urls/test_detail_views/: test_delete.py
film-catalog/testing/test_api/test_api_v1/test_film_catalog_urls/test_views/test_detail_views/: test_delete.py  test_transfer.py  test_update.py  test_update_partial.py
film-catalog/testing/test_api/test_api_v1/test_film_catalog_urls/test_views/test_list_views/: test_create.py
film-catalog/testing/test_schemas/: test_film.py  test_user.py
film-catalog/testing/utils/: __init__.py  utils.py
